// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/FontPicker default 1`] = `
<div
  className="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        defaultValue=""
        type="hidden"
      />
      <div
        className="euiFormControlLayout euiFormControlLayout--compressed"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <span
            className="emotion-euiScreenReaderOnly"
            id="euiSuperSelect__generated-id__screenreaderLabelId"
          >
            Select an option: , is selected
          </span>
          <button
            aria-haspopup="listbox"
            className="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelectControl--compressed"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          />
          <div
            className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              className="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                className="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
                size="s"
              >
                
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/FontPicker with value 1`] = `
<div
  className="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value="'American Typewriter', 'Courier New', Courier, Monaco, mono"
      />
      <div
        className="euiFormControlLayout euiFormControlLayout--compressed"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <span
            className="emotion-euiScreenReaderOnly"
            id="euiSuperSelect__generated-id__screenreaderLabelId"
          >
            Select an option: 
            <div
              style={
                Object {
                  "fontFamily": "'American Typewriter', 'Courier New', Courier, Monaco, mono",
                }
              }
            >
              American Typewriter
            </div>
            , is selected
          </span>
          <button
            aria-haspopup="listbox"
            className="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelectControl--compressed"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <div
              style={
                Object {
                  "fontFamily": "'American Typewriter', 'Courier New', Courier, Monaco, mono",
                }
              }
            >
              American Typewriter
            </div>
          </button>
          <div
            className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              className="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                className="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
                size="s"
              >
                
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
